<resources>
    <string name="app_name">Field Counter</string>
    <string name="sixPoint">+6 Points</string>
    <string name="threePoint">+3 Points</string>
    <string name="twoPoint">+2 Points</string>
    <string name="onePoint">+1 Point</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="points">0</string>
    <string name="touchDown">Touchdown</string>
    <string name="fieldGoal">Field Goal</string>
    <string name="conversionOne">One-Point Conversion</string>
    <string name="conversionTwo">Two-Point Conversion</string>
    <string name="reset">Reset</string>
</resources>
